fixing double counting issue with the hru characteristics
