# Neptune.Models/DataTransferObjects/TreatmentBMPHRUCharacteristicsSummarySimpleDto.cs
@@ -2,6 +2,7 @@
 {
     public class TreatmentBMPHRUCharacteristicsSummarySimpleDto
     {
+        public int ProjectHRUCharacteristicID { get; set; }
         public int TreatmentBMPID { get; set; }
         public string LandUse { get; set; }
         public double Area { get; set; }
